GNOME Bugzilla – Bug 711841
unused-but-set compiler warning in EogThumbNav
Last modified: 2013-11-11 13:11:06 UTC
The variable "ltr" is set but not used in "eog_thumb_nav_vadj_changed" method in src/thumbview/eog-thumb-nav.c
Created attachment 259558 [details] [review] Fixed unused-but-set warning in EogThumbNav
Comment on attachment 259558 [details] [review] Fixed unused-but-set warning in EogThumbNav Pushed to master as commit 7834ebbe9959aac4514f7352181bc4efb292a275. Thanks!