Fixed unused-but-set warning in EogThumbNav

https://bugzilla.gnome.org/show_bug.cgi?id=711841